--- a/package.json
+++ b/package.json
@@ -8,19 +8,32 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.8.3",
-    "react-native": "0.59.8"
+    "react-native": "0.59.8",
+    "react-native-gesture-handler": "^1.2.1",
+    "react-navigation": "^3.11.0",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
+    "styled-components": "^4.2.0",
+    "typesafe-actions": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/runtime": "^7.4.5",
     "@types/react": "^16.8.18",
     "@types/react-native": "^0.57.59",
+    "@types/react-redux": "^7.0.9",
+    "@types/styled-components": "^4.1.15",
     "babel-jest": "^24.8.0",
     "concurrently": "^4.1.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
     "react-test-renderer": "16.8.3",
+    "reactotron-react-native": "^3.5.2",
+    "reactotron-redux": "^3.1.0",
+    "reactotron-redux-saga": "^4.2.2",
     "typescript": "^3.4.5"
   },
   "jest": {
